project/stage/semantic_tests/reject/string_while_cond.ul
void main() {
    int a;

    while ("true") { }
}
